--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,14 @@ body {
   margin: 0;
 }
 
+.buttons::-webkit-scrollbar {
+  background-color: #d9d9d9;
+  width: 0.75rem;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.buttons::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 1rem;
+  border: 2px solid #d9d9d9;
+}
